        Embedding of PDF's with <object> or <embed> fails when there is no MIME type specified         https://bugs.webkit.org/show_bug.cgi?id=64934

Reviewed by Dan Bernstein.

        * WebProcess/WebPage/WebPage.cpp: (WebKit::WebPage::createPlugin): Check URL extension, too,
        like GetPluginPath does in UI process. One difference is that UI process additionally tries
        platform specific extension to MIME type mapping, but that doesn't matter for PDF, which
        does not have other standard extensions.



Canonical link: https://commits.webkit.org/85901@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97167 268f45cc-cd09-0410-ab3c-d52691b4dbfc